# bw-merge-window

./: .gitignore  README.md  pyproject.toml  run_docker_build.bash  run_docker_tests.bash  run_tests.bash  test.Dockerfile
.github/workflows/: release.yml  test.yml
bw_merge_window/: __init__.py  entry.py  logger.py  merge.py
tests/: shared_data.py  test_against_bwmp.py  test_merge_helpers.py  test_merge_main.py
tests/data/: 25574.Blueprint.ERS487305.RNA-Seq.signal_reverse.bigWig  25575.Blueprint.ERS487305.RNA-Seq.signal_forward.bigWig  25582.Blueprint.ERS487306.RNA-Seq.signal_reverse.bigWig
